--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ ol {
   list-style: none;
 }
 
+.container {
+  max-width: 1420px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
